<resources>

    <string name="app_name">AndroidDatabaseDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AndroidDatabaseDemo</string>
    <string name="label_id">ID :</string>
    <string name="label_name">Name :</string>
    <string name="label_semester">Samester :</string>
    <string name="label_course">Course</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="label_placeholder">Dynamic</string>

</resources>